--- a/Cpp-OpenGL.vcxproj.filters
+++ b/Cpp-OpenGL.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="VAO.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="stb.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="default.vert">
